@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
+  <mime-type type="text/x-genius">
+    <comment>Genius GEL file</comment>
+    <glob pattern="*.gel"/>
+  </mime-type>
+</mime-info>
