@@ -1,3 +1,7 @@
+Thu May 27 16:11:07 2004  George Lebl <jirka@5z.com>
+
+	* genius.xml, Makefile.am: add genius to the shared mime info db
+
 Thu May 27 15:39:48 2004  George Lebl <jirka@5z.com>
 
 	* src/genius-readline-helper.c, src/gnome-genius.[ch]:  Add
